--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@ body {
     width: 800px;
     margin: 0 auto;
     border: 3px solid #800000;
-    background-color: #fffded;
+    background-color: #F5F5F5;
 }
 
 /* the styles for the header */
@@ -51,7 +51,7 @@ nav {
 nav ul {
 	list-style: none;
 	padding: 1em 0;
-	background-color: #800000;
+	background-color: #00BFFF;
 }
 
 nav li {
