--- a/styles/main.css
+++ b/styles/main.css
@@ -1,27 +1,39 @@
+article, aside, figure, footer, header, nav, section {
+    display: block;
+}
 * {
 	margin: 0;
 	padding: 0;
 }
 html {
-	background-color: white;
+	background-color: silver;
 }
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
     font-size: 87.5%;
-    width: 870px;
+	max-width: 1000px;
+    width: 90%;
     margin: 0 auto;
     border: 3px solid black;
     background-color: #F5F5F5;
+	border-radius: 5px;
 }
-/* header */
 header {
-	padding: 1.5em 0;
+	padding: 2em 1em;
+	text-align: center;
 }
-/* nav bar */
+header h1 {
+	padding: 1em;
+	background: linear-gradient(#F5F5F5, gray, #F5F5F5);
+	text-shadow: 2px 2px 4px white;
+	border-radius: 10px;
+	
+}
 nav {
-	clear: left;
 	margin: 0;
 	padding: 0;
+	border-top: 3px solid black;
+	border-bottom: 3px solid black;
 }
 nav ul {
 	list-style: none;
@@ -37,23 +49,74 @@ nav a {
 	font-weight: bold;
 	border-right: 2px solid #fffded;
 }
-.current {
+a:hover {
+	color: blue;
+}
+.active_nav {
 	color: black;
 }
+section {
+	padding: 2em;
+	border-radius: 5px;
+}
+section h2 {
+	border-bottom: 1px solid #00BFFF;
+	margin-bottom: .5em;
+}
 #bwpro_background {
+	background-color: black;
 	background-image: url("../images/bwpro.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	margin: 2em;
+	min-height: 270px;
+	min-width: 172px;
+	max-height: 1740px;
+	max-width: 852px;
+	border-radius: 20px;
 }
 .overlay_text {
+	max-width: 715px;
 	color: white;
+	margin: 1em;
+	padding: 2em;
+}
+.overlay_text ul {
+	padding-left: 1.5em;
+	font-size: 110%;
+	list-style-type: disc;
+}
+.overlay_text a {
+	color: white;
+	text-decoration: underline;
+}
+#mecoe_image {
+	vertical-align: middle;
+}
+section figure{
+	padding-top: 2em;
+	text-align: center;
+}
+article {
+	-moz-column-count: 3;
+	-webkit-column-count: 3;
+	column-count: 3;
+	-moz-column-gap: 1em;
+	-webkit-column-gap: 1em;
+	column-gap: 1em;
+}
+ul {
+	list-style-type: none;
+}
+li {
+	padding: .1em;
 }
 footer {
 	border-top: 3px solid black;
-	border-right: 3px solid black;
-	border-left: 3px solid black;
 	clear: both;
 	background-color: #00BFFF;
 }
 footer p {
-	padding: 1em 0;
+	padding: 1.5em 2em;
 	text-align: center;
 }
