--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+/* Michael Hanna and Kyle Liechty: CMIS 300, Project 2: Client Web Site */
 article, aside, figure, footer, header, nav, section {
     display: block;
 }
@@ -61,6 +62,7 @@ section {
 }
 section h2 {
 	border-bottom: 1px solid #00BFFF;
+	margin-top: 1em;
 	margin-bottom: .5em;
 }
 #bwpro_background {
@@ -104,6 +106,7 @@ article {
 	-moz-column-gap: 1em;
 	-webkit-column-gap: 1em;
 	column-gap: 1em;
+	padding: 0em .5em;
 }
 ul {
 	list-style-type: none;
